# music_player

./: .gitignore  CMakeLists.txt  REARMED.md
include/: AudioEngine.h  MainWindow.h
src/: AudioEngine.cpp  MainWindow.cpp  MainWindow.ui  main.cpp
